--- a/portfolio1.html
+++ b/portfolio1.html
@@ -499,7 +499,7 @@
                 <img src="img/for_anton_work/r1.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - КП 2018
+                        4 семестр - Обогащенные интерфейсы веб-приложений
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -522,7 +522,7 @@
                 <img src="img/for_anton_work/r2.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - КП 2018
+                        4 семестр - Обогащенные интерфейсы веб-приложений
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -546,7 +546,7 @@
                 <img src="img/for_anton_work/r3.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - КП 2018
+                        4 семестр - Обогащенные интерфейсы веб-приложений
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -573,7 +573,7 @@
                 <img src="img/for_anton_work/r4.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - КП 2018
+                        4 семестр - Обогащенные интерфейсы веб-приложений
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -595,7 +595,7 @@
                 <img src="img/for_anton_work/r5.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - КП 2018
+                        4 семестр - Обогащенные интерфейсы веб-приложений
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -619,7 +619,7 @@
                 <img src="img/for_anton_work/r6.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - КП 2018
+                        4 семестр - Обогащенные интерфейсы веб-приложений
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
