--- a/portfolio1.html
+++ b/portfolio1.html
@@ -44,6 +44,7 @@
     <button class="tab1">Работы по УПП</button>
     <button class="tab2">Работы по КП 2018</button>
     <button class="tab3">Работы по ОИ web-приложений</button>
+    <button class="tab4">Спешил</button>
     </div>
 </section>
   
@@ -499,7 +500,7 @@
                 <img src="img/for_anton_work/r1.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - Обогащенные интерфейсы веб-приложений
+                        4 семестр - ОИ веб
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -522,7 +523,7 @@
                 <img src="img/for_anton_work/r2.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - Обогащенные интерфейсы веб-приложений
+                        4 семестр - ОИ веб
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -546,7 +547,7 @@
                 <img src="img/for_anton_work/r3.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - Обогащенные интерфейсы веб-приложений
+                        4 семестр - ОИ веб
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -573,7 +574,7 @@
                 <img src="img/for_anton_work/r4.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - Обогащенные интерфейсы веб-приложений
+                        4 семестр - ОИ веб
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -595,7 +596,7 @@
                 <img src="img/for_anton_work/r5.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - Обогащенные интерфейсы веб-приложений
+                        4 семестр - ОИ веб
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -619,7 +620,7 @@
                 <img src="img/for_anton_work/r6.png">
                 <div class="bucket">
                     <h3 class="bucket-title">
-                        4 семестр - Обогащенные интерфейсы веб-приложений
+                        4 семестр - ОИ веб
                     </h3>
                     <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
                 </div>
@@ -630,7 +631,39 @@
     </section>
 </div>        
    
+<!--------------------------------------------------------------
+Для экзамена
+--------------------------------------------------------------> 
   
+<div class="hide4">
+  <section class="buckets grid">
+    <ul>
+        <li>
+            <div id="zatemnenieOI6">
+                <div id="oknoOI6">
+                    <h1>Спешил</h1>
+                    <p>
+                        С помощью директивы require импортируйте объект o3 под именем obj из модуля, код которого находится по адресу	<a href="https://kodaktor.ru/j/protochain">https://kodaktor.ru/j/protochain</a> определите	цепочку прототипов этого объекта и экспортируйте результат в	качестве массива имён этих прототипа. Цепочка должна определяться рекурсией до достижения null, массив имён прототипов должен быть результатом одного вызова рекурсивной функции.
+                    </p> 
+                    <h2><a href="https://github.com/TradesMark/homework13_02_18/tree/master/13.02.18">  Ссылка на задание </a></h2>
+                    <a href="#portfolio" class="close">
+                        Закрыть окно
+                    </a>
+                </div>
+            </div>
+            <a href="#zatemnenieOI6">
+                <img src="img/for_anton_work/r1.png">
+                <div class="bucket">
+                    <h3 class="bucket-title">
+                        4 семестр -  К экзамену
+                    </h3>
+                    <p>Не стоим на месте проходим по ссылке (жмякни по картинке)</p>
+                </div>
+            </a> 
+        </li>
+    </ul>
+    </section>
+    </div>
   
 <!--------------------------------------------------------------
 Конец работ Госса
