--- a/portfolio1.html
+++ b/portfolio1.html
@@ -643,9 +643,9 @@
                 <div id="oknoOI6">
                     <h1>Спешил</h1>
                     <p>
-                        С помощью директивы require импортируйте объект o3 под именем obj из модуля, код которого находится по адресу	<a href="https://kodaktor.ru/j/protochain">https://kodaktor.ru/j/protochain</a> определите	цепочку прототипов этого объекта и экспортируйте результат в	качестве массива имён этих прототипа. Цепочка должна определяться рекурсией до достижения null, массив имён прототипов должен быть результатом одного вызова рекурсивной функции.
+                        <a href="https://kodaktor.ru/bind02032018_76f59">Ссылка на кодактор </a> с заданием по bind
+                        <img src="img/kodaktor.png" width="60%" height="50%">
                     </p> 
-                    <h2><a href="https://github.com/TradesMark/homework13_02_18/tree/master/13.02.18">  Ссылка на задание </a></h2>
                     <a href="#portfolio" class="close">
                         Закрыть окно
                     </a>
